<resources>
    <string name="app_name">Geekbrains_4_1</string>
    <string name="editTextFirst">Что нибудь пишем тут</string>
    <string name="textHelloFirst">Привет андроид</string>
    <string name="buttonTextStart">Нажималка</string>
    <string name="switchText">Переключалка</string>
    <string name="checkBoxText">Отмечалка</string>
    <string name="toggleButtonText">Выключалка</string>
    <string name="textOffFirst">Что-то выкл</string>
    <string name="textOnFirst">Что-то вкл</string>
    <string name="editTextSecond">Вводим какой нибудь текст</string>
    <string name="editTextThird">Вводим свое имя</string>
    <string name="editTextFourth">Вводим свой телефон</string>
    <string name="editTextFifth">Вводим число</string>
    <string name="editTextSixth">Вводим электронную почту</string>
    <string name="editTextSeventh">Вводим пароль</string>
    <string name="editTextEighth">А тут дату</string>
    <string name="textName">КАЛЬ-КУЛЬ</string>
    <string name="test">0</string>
    <string name="buttonRoot">\u221a</string>
    <string name="buttonSquaring">x\u00B2</string>
    <string name="buttonClear">С</string>
    <string name="buttonWipe">"&lt;"</string>
    <string name="buttonSeven">7</string>
    <string name="buttonEight">8</string>
    <string name="buttonNine">9</string>
    <string name="buttonSplit">\u00F7</string>
    <string name="ButtonPlus">+</string>
    <string name="ButtonEqualTo">=</string>
    <string name="ButtonZero">0</string>
    <string name="ButtonDot">,</string>
    <string name="ButtonMinus">-</string>
    <string name="ButtonThree">3</string>
    <string name="ButtonTwo">2</string>
    <string name="ButtonOne">1</string>
    <string name="ButtonMultiply">\u00D7</string>
    <string name="ButtonSix">6</string>
    <string name="ButtonFive">5</string>
    <string name="ButtonFour">4</string>
    <string name="change_topic">Сменить тему</string>
    <string name="nightTextSwitch">НОЧНАЯ</string>
    <string name="dayTextSwitch">ДНЕВНАЯ</string>
    <string name="buttonSave">Вернуться</string>
</resources>